--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,5 +1,6 @@
 body{
     background-image: linear-gradient(rgb(19, 19, 255),rgb(0, 219, 235));
+    background-size: cover;
     font-family: "Lucida sans", sans-serif;
     color: white;
 }
@@ -11,13 +12,30 @@ h1{
 h3{
     font-size: 25px;
 }
-button{
-    margin: 20px;
-    font-size: 18px;
-    font-weight: bold;
-    width: 180px;
-    height: 110px;
-    box-shadow: 5px 5px;
+
+.modal{
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left:0;
+    top:0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.4);
+}
+.modal-content{
+    background-color: rgb(17, 17, 17);
     border-radius: 3px;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 60%;
 }
 
+.close{
+    font-size: 2rem;
+}
+.close:hover,.close:focus{
+    color: black;
+    cursor: pointer;
+}
