--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,5 +1,5 @@
 body{
-    background-image: linear-gradient(rgb(19, 19, 255),rgb(0, 219, 235));
+    background-color: rgb(255, 196, 0);
     background-size: cover;
     font-family: "Lucida sans", sans-serif;
     color: white;
@@ -10,7 +10,21 @@ h1{
     text-decoration-line: underline;
 }
 h3{
-    font-size: 25px;
+    font-size: 32px;
+}
+
+button{
+    background-color: red;
+    margin: 10px;
+    padding: 40px;
+    width: 70%;
+    height: 80%;
+    border-radius: 10px;
+    font-size: 30px;
+    box-shadow: 3px 5px black;
+}
+button:hover{
+    background-color: rgb(182, 3, 3) ; 
 }
 
 .modal{
@@ -24,7 +38,7 @@ h3{
     background-color: rgba(0,0,0,0.4);
 }
 .modal-content{
-    background-color: rgb(17, 17, 17);
+    background-color: blue;
     border-radius: 3px;
     margin: 15% auto;
     padding: 20px;
